# freshli-agent-python

./: .gitignore  .rubocop.yml  Gemfile  README.md  pyproject.toml
features/: start-server.feature
features/gRPC/: DetectManifests.feature  GetValidatingPackages.feature  GetValidatingRepositories.feature  ProcessManifest.feature  RetrieveReleaseHistory.feature
features/step_definitions/: command.rb  cyclonedx.rb  git.rb  grpc.rb
features/step_definitions/grpc/: freshli_agent_pb.rb  freshli_agent_services_pb.rb  health_pb.rb
features/support/: aruba.rb  env.rb  grpc_client.rb  ports.rb  test_services.rb
protos/corgibytes/freshli/agent/grpc/: freshli_agent.proto
src/corgibytes/: __init__.py
src/corgibytes/freshli/agent/: __init__.py  detect_manifests_command.py
src/corgibytes/freshli/agent/commands/: command.py  detect_manifests_command.py  start_server_command.py
src/corgibytes/freshli/agent/server/: agent_servicer.py
tests/: detect_manifests_command_test.py
tests/data/pip/: README.md
tests/data/pipenv/: README.md
tests/data/poetry/: README.md
